--- a/public/upload.html
+++ b/public/upload.html
@@ -72,7 +72,7 @@
 
     <div class="container mt-3">
         <input type="text" class="form-control mt-2" id="title" placeholder="title">
-        <textarea class="form-control mt-2" id="content">content</textarea>
+        <input type="text" class="form-control mt-2" id="content">content</textarea>
         <input type="text" class="form-control mt-2" id="price" placeholder="price">
         <input class="form-control mt-2" type="file" id="image">
         <button class="btn btn-danger mt-3" id="send">올리기</button>
@@ -106,14 +106,14 @@
                     console.log('업로드된 경로는', url);
                     var 저장할거 = { 
                         제목 : $('#title').val(),
-                        가격 : $('#price').val(), //숫자로 변환해주라
+                        가격 : parseInt($('#price').val()), //숫자로 변환해주라
                         내용 : $('#content').val(),
                         날짜 : new Date(),
                         이미지 : url
                     }
                     db.collection('product').add(저장할거).then((result)=>{
                         console.log(result);
-                        //window.location.href = "/index.html"
+                        window.location.href = "/index.html"
                     }).catch((err)=>{
                         console.log(err)
                     })
