login chat merge

--- a/public/detail.html
+++ b/public/detail.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="upload.html"> Upload</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="login.html">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
