--- a/public/upload.html
+++ b/public/upload.html
@@ -58,7 +58,7 @@
               <a class="nav-link" href="upload.html">Upload</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="login.html">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
