채팅하기버튼 누르면 채팅방으로 이동

--- a/public/detail.html
+++ b/public/detail.html
@@ -86,7 +86,7 @@
             <div class="user">
             <img class="profile" src='image/unknown.jpg' style="width: 5%; height: 5%; margin-top: 1%;"></img>
             <span class="name" style="margin-top: 5%; margin-left: 1%; font-size: 20px; text-align: center; line-height: 80px">이름</span>
-            <div class="button" style="background-color: rgb(226, 226, 226); width: 100px; height: 40px; text-align: center; border-radius: 10px; line-height: 40px; cursor: pointer; display: inline-block; margin-left: 23%;">채팅하기</div>
+            <div class="button" onclick="location.href='chat.html'" style="background-color: rgb(226, 226, 226); width: 100px; height: 40px; text-align: center; border-radius: 10px; line-height: 40px; cursor: pointer; display: inline-block; margin-left: 18%;">채팅하기</div>
             </div>
             <hr width="40%">
             <h5 class="title" style="font-size: 25px"><b>${doc.data().제목}</b></h5>
