--- a/public/index.html
+++ b/public/index.html
@@ -107,19 +107,19 @@
           })
 
         })
-        ㄴ
         
-        var title = document.getElementsByClassName("title");
-        title.click(function(){
-            var id_check = $(this).attr("id");
-            console.log(doc.data().제목+"클릭되었음");
+        
+        // var title = document.getElementsByClassName("title");
+        // title.click(function(){
+        //     var id_check = $(this).attr("id");
+        //     console.log(doc.data().제목+"클릭되었음");
             // console.log(event.target.nodeName); //H5
             // console.log(event.target.value);  //undefined
             // console.log(event.currentTarget.value)  //undefined
             // console.log($(event.target))
             // console.log($(event.currentTarget))
             // localStorage.setItem('title', title);
-          });
+          // });
       })
     </script>
 
