--- a/public/detail.html
+++ b/public/detail.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">CARROT MARKET</a>
+        <img class="navbar-brand" src="image/carrot.png" alt="당근마켓" width="10%" height="10%" href="index.html">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -74,8 +74,6 @@
     </script>
 
     <script>
-<<<<<<< Updated upstream
-        
         console.log(localStorage.getItem('id'));
         const db = firebase.firestore();
         var productRef = db.collection("product");
@@ -100,31 +98,6 @@
 
 
           } else {
-=======
-      console.log(localStorage.getItem('id'));
-      const db = firebase.firestore();
-      var productRef = db.collection("product");
-      productRef.doc(localStorage.getItem('id')).get().then((doc)=>{
-      if (doc.exists) {
-        console.log("Document data:", doc.data());
-
-        var template = `<img class="detailimg" src=${doc.data().이미지} style="width: 40%"; height:45%;"></img>
-          <div class="user">
-          <img class="profile" src='image/unknown.jpg' style="width: 5%; height: 5%; margin-top: 1%;"></img>
-          <span class="name" style="margin-top: 5%; margin-left: 1%; font-size: 20px; text-align: center; line-height: 80px">이름</span>
-          <div class="button" style="background-color: rgb(226, 226, 226); width: 100px; height: 40px; text-align: center; border-radius: 10px; line-height: 40px; cursor: pointer; display: inline-block; margin-left: 19%;">채팅하기</div>
-          </div>
-          <hr width="40%">
-          <h5 class="title" style="font-size: 25px"><b>${doc.data().제목}</b></h5>
-          <p class="date" style="color: darkgrey;">${doc.data().날짜.toDate().getFullYear()}년 ${doc.data().날짜.toDate().getMonth()}월 ${doc.data().날짜.toDate().getDate()}일 
-            ${doc.data().날짜.toDate().getHours()}시 ${doc.data().날짜.toDate().getMinutes()}분</p>
-          <p class="price"><b>${doc.data().가격}원</b></p>
-          <p class="content" style="margins-top:600px">${doc.data().내용}</p>`;
-
-        $('.box').append(template)
-      
-      } else {
->>>>>>> Stashed changes
             // doc.data() will be undefined in this case
             console.log("No such document!"); 
           }
