--- a/public/login.html
+++ b/public/login.html
@@ -49,7 +49,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">CARROT MARKET</a>
+        <img class="navbar-brand" src="image/carrot.png" alt="당근마켓" width="10%" height="10%" href="index.html">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
