--- a/public/chat.html
+++ b/public/chat.html
@@ -81,6 +81,7 @@
             const db = firebase.firestore();
             const storage = firebase.storage();
             var uid;
+            var name;
 
             var userRef = db.collection("user");
             userRef.doc(seller).get().then((doc)=>{
@@ -92,6 +93,15 @@
                 }
             }).catch((error)=>{
                 console.log("Err getting doc: ", error);
+            })
+
+            db.collection("user").where("uid","==",seller).get().then((querySnapshot)=>{
+                querySnapshot.forEach((doc)=>{
+                    console.log(doc.id,"=>", doc.data());
+                    name = doc.data().이름;
+                });
+            }).catch((error)=>{
+                console.log("Error getting documents: ",error);
             })
 
             firebase.auth().onAuthStateChanged((user)=> {
@@ -109,7 +119,7 @@
 
                 <div class="chat-message other">
                     <section><i class="fa fa-user"></i></section>
-                    <span>상대방</span>
+                    <span>${name}</span>
                     <div>안돼요.</div>
                 </div>
                 
@@ -122,7 +132,7 @@
 
                     <div class="chat-message other">
                         <section><i class="fa fa-user"></i></section>
-                        <span>상대방</span>
+                        <span>${name}</span>
                         <div>네</div>
                     </div>
                     
