--- a/public/register.html
+++ b/public/register.html
@@ -113,6 +113,7 @@
                 })
 
                 alert("회원 가입을 축하드립니다!");
+                window.location.href = "/login.html"
             }).catch((err)=>{
                 console.log(err)
             })
