--- a/public/detail.html
+++ b/public/detail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MadCamp3: 당근마켓</title>
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -93,19 +93,20 @@
               name = docu.data().이름
               console.log("이름",name);
 
-              var template = `<img class="detailimg" src=${doc.data().이미지} style="width: 40%"; height:45%;"></img>
+              var template = `<img class="detailimg" src=${doc.data().이미지} style="width: 600px"; height:400px; display:block; margin:0 auto;"></img>
           <div class="user">
             <img class="profile" src='image/unknown.jpg' style="width: 5%; height: 5%; margin-top: 1%;"></img>
             <span class="name" style="margin-top: 5%; margin-left: 1%; font-size: 20px; text-align: center; line-height: 80px">${name}</span>
-            <div class="btn" style="background-color: rgb(226, 226, 226); width: 100px; height: 40px; text-align: center; border-radius: 10px; cursor: pointer; display: inline-block; margin-left: 18%;">채팅하기</div>
+            <div class="btn" style="background-color: rgb(226, 226, 226); width: 100px; height: 40px; text-align: center; border-radius: 10px; cursor: pointer; display: inline-block; margin-left: 360px;">채팅하기</div>
           </div>
-          <hr width="40%">
+          <hr width="600px">
           <h5 class="title" style="font-size: 25px"><b>${doc.data().제목}</b></h5>
           <p class="date" style="color: darkgrey;">${doc.data().날짜.toDate().getFullYear()}년 ${doc.data().날짜.toDate().getMonth()}월 ${doc.data().날짜.toDate().getDate()}일 
             ${doc.data().날짜.toDate().getHours()}시 ${doc.data().날짜.toDate().getMinutes()}분</p>
           <p class="price"><b>${doc.data().가격}원</b></p>
-          <p class="content" style="margins-top:600px">${doc.data().내용}</p>`;
-
+          <p class="content" style="margins-top:600px; width: 600px; font-size: 18px; margin-bottom: 90px">${doc.data().내용}</p>
+          <hr width="600px">`;
+          
 
           $('.box').append(template)
 
