로그아웃기능

--- a/public/chat.html
+++ b/public/chat.html
@@ -147,7 +147,7 @@
                     <i class="fa fa-smile-o" aria-hidden="true"></i>
                 </div>
                 <div class="btn-submit">
-                    <button>전송</button>
+                    <span>전송</span>
                 </div>
             </div>`;
             $('#chat-room').append(template);
