--- a/public/login.html
+++ b/public/login.html
@@ -33,6 +33,7 @@
 
     <script>
        var firebaseUser; //파이어베이스 유저 전역변수
+       var page;
       var firebaseConfig = {
       apiKey: "AIzaSyDcou5T9263ShlgwpPQpFyozIXrUNUcj2w",
       authDomain: "madcamp3-f199e.firebaseapp.com",
@@ -62,7 +63,7 @@
               <a class="nav-link" href="upload.html">Upload</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Login</a>
+              <a class="nav-link" page></a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -88,17 +89,15 @@
     <script>
       const db = firebase.firestore();
       const storage = firebase.storage();
+      var uid;
 
       $('#login').click(function(){
             var 이메일 = $('#email').val();
             var 패스워드 = $('#pw').val();
             
             firebase.auth().signInWithEmailAndPassword(이메일, 패스워드).then((result) => {
-                //console.log(result.user);
                 firebaseUser = result.user;
                 loginSuccess(firebaseUser);
-                //alert("로그인 되었습니다.");
-                //window.location.href = "/index.html";
             }).catch((err) => {
                 alert("비밀번호가 틀렸습니다.");
             })
@@ -110,6 +109,23 @@
             alert("로그인 되었습니다.");
             window.location.href = "/index.html";
         }
+
+        firebase.auth().onAuthStateChanged((user)=> {
+                    if(user) {
+                        var storeuid={
+                            uid : user.uid
+                        }
+                        if(uid == null){
+                          page = 'href="login.html">Login'; 
+                        }
+                        else {
+                          page = 'href="chat.html">Logout';
+                        }
+                      }
+                    else {
+                        console.log("error");
+                    }
+                })
 
     </script>
     <script>
