--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MadCamp3: 당근마켓</title>
+    <title>Document</title>
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -33,7 +33,6 @@
 
     <script>
        var firebaseUser; //파이어베이스 유저 전역변수
-       var page;
       var firebaseConfig = {
       apiKey: "AIzaSyDcou5T9263ShlgwpPQpFyozIXrUNUcj2w",
       authDomain: "madcamp3-f199e.firebaseapp.com",
@@ -63,11 +62,10 @@
               <a class="nav-link" href="upload.html">Upload</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" page></a>
-
+              <a class="nav-link" href="#">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="logout.html">Logout</a>
             </li>
           </ul>
         </div>
@@ -90,7 +88,6 @@
     <script>
       const db = firebase.firestore();
       const storage = firebase.storage();
-      var uid;
       var 이메일;
       var 패스워드;
 
@@ -104,13 +101,17 @@
         var errorMessage = error.message;
       });
 
+
       $('#login').click(function(){
             이메일 = $('#email').val();
             패스워드 = $('#pw').val();
             
             firebase.auth().signInWithEmailAndPassword(이메일, 패스워드).then((result) => {
+                //console.log(result.user);
                 firebaseUser = result.user;
                 loginSuccess(firebaseUser);
+                //alert("로그인 되었습니다.");
+                //window.location.href = "/index.html";
             }).catch((err) => {
                 alert("비밀번호가 틀렸습니다.");
             })
@@ -123,23 +124,11 @@
             window.location.href = "/index.html";
         }
 
-        firebase.auth().onAuthStateChanged((user)=> {
-                    if(user) {
-                        var storeuid={
-                            uid : user.uid
-                        }
-                        if(uid == null){
-                          page = 'href="login.html">Login'; 
-                        }
-                        else {
-                          page = 'href="chat.html">Logout';
-                        }
-                      }
-                    else {
-                        console.log("error");
-                    }
-                })
-
+    </script>
+    <script>
+    $('#logout').click(function() {
+      firebase.auth().signOut();
+    })
     </script>
 
   </body>
