--- a/public/register.html
+++ b/public/register.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="logout.html">Logout</a>
                 </li>
             </ul>
             </div>
