--- a/public/logout.html
+++ b/public/logout.html
@@ -81,8 +81,8 @@
           name = doc.data().이름;
 
           var tem = `<center> 
-            <div class="name" id="name" style="">${name} 님 로그아웃 하시겠습니까?</div>
-            <button type="submit" class = "btn btn-danger" id="logout">로그아웃</button>
+            <div class="name" id="name" style="font-size: 30px; margin-top: 100px">${name} 님 로그아웃 하시겠습니까?</div>
+            <button type="submit" class = "btn btn-danger" id="logout" style="font-size: 23px; width: 150px; height: 50px; margin-top: 60px">로그아웃</button>
             </center>`;
               
           $('.profilebox').append(tem)
